30 Jul 2018
add: missing require takeedit.php
update: check if var is empty before using it function_books.php
add: book update to images update cleanup
fix: ignore query upgrade_database.php
update: delete session for disabled users
add: button to ignore query on database update
update: allow staff site access when site set offline
remove: bad banner
fix: get lang before use of lang
fix: install set correct announce https url
fix: left join when no topic forum_posts.php

29 Jul 2018
add: default banner.jpp
add: dbconn() to all cleanup scripts
remove: time_adjust and time_offest from site_config
update: inner join on torrents comments.php
fix: when empty array comments.php 
update: site_config
update: assumed fk inactive_update.php
update: drop fk contstaint on dbbackup
update: drop fk constraint on bans
fix: customsmilie_update.php
update: drop fk constraint on bannedemails
update: site_config
fix: redis flush cache flushing all databases instead of just redis site db
update: site_config
fix: torrents_update.php
update: database files

28 Jul 2018
fix: card table background
fix: nfo display viewnfo.php
update: clean image caches when poster added to torrent
remove: XBT Cleanup Items
update: Adminer 4.6.3
revert: css image to base64
fix: postcss css cleanup
update: text for bad id details.php
fix: redirect to index page and show flash message when torrent not exist details.php
fix: upload description removing characters such as ë, è, é, and ê
fix: upload stripping ascii from description instead of nfo

27 Jul 2018
update: add class color to flash message hnrs.php
fix: format_username can't be used with flash messages hnrs.php
fix: direct link to post view_topic.php
replace: file_get_contents() with fetch() tfreak.php
update: use global $fluent instead of passing it User.php
add: delete_by_id() Torrent.php
replace: MyPeers_ with peers_
fix: first db connection error takeupload.php
update: search.php bot use only